reset and rotate

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <meta charset="UTF-8"> 
     </head>
     <body>
-        <canvas id="canvas">why</canvas><br>
-        <input type="file" id="filepicker" />
-        <button id="save">Save</button><br>
-        <button id="t1" fn="transform1">disarray</button>
-        <button id="t2" fn="transform2">RED</button>
+        <canvas id="canvas">why</canvas>
+        <div id="btns">
+            <input type="file" id="filepicker" />
+            <button id="save">Save</button><button id="rotate">Rotate</button><button id="reset">Reset</button><br>
+            <button id="t1" fn="transform1">disarray</button>
+            <button id="t2" fn="transform2">RED</button>
+        </div>
     </body>
 </html>
